--- a/.github/ISSUE_TEMPLATE/app_bug.yml
+++ b/.github/ISSUE_TEMPLATE/app_bug.yml
@@ -1,52 +1,50 @@
 name: Report a bug or regression in a known-working app
 labels: ["bug (supported app)"]
 body:
-    - type: markdown
-      attributes:
-        value: |
-          This form is for reporting an issue with an app that is already known
-          to be working in touchHLE. Please check the [app compatibility database](https://appdb.touchhle.org/)
-          to see which apps work. Apps with less than three stars are not
-          considered “working”.
-    - type: input
-      attributes:
-        label: App DB report link
-        description: |
-          Link to the pre-existing database report for the app.
-        placeholder: https://appdb.touchhle.org/apps/1
-      validations:
-        required: true
-    - type: input
-      attributes:
-        label: App name
-      validations:
-        required: true
-    - type: input
-      attributes:
-        label: App version
-      validations:
-        required: true
-    - type: input
-      attributes:
-        label: touchHLE version
-      validations:
-        required: true
-    - type: input
-      attributes:
-        label: Operating system
-      validations:
-        required: true
-    - type: input
-      attributes:
-        label: GPU
-      validations:
-        required: true
-    - type: textarea
-      attributes:
-        label: What is the problem with the app?
-      validations:
-        required: true
-    - type: textarea
-      attributes:
-        label: If touchHLE crashed, please paste the log output.
-        render: ''
+  - type: markdown
+    attributes:
+      value: |
+        This form is for reporting an issue with an app that is already known
+        to be working in touchHLE.
+  - type: input
+    attributes:
+      label: App DB report link
+      description: |
+        Link to the pre-existing database report for the app.
+      placeholder: https://appdb.touchhle.org/apps/1
+    validations:
+      required: true
+  - type: input
+    attributes:
+      label: App name
+    validations:
+      required: true
+  - type: input
+    attributes:
+      label: App version
+    validations:
+      required: true
+  - type: input
+    attributes:
+      label: touchHLE version
+    validations:
+      required: true
+  - type: input
+    attributes:
+      label: Operating system
+    validations:
+      required: true
+  - type: input
+    attributes:
+      label: GPU
+    validations:
+      required: true
+  - type: textarea
+    attributes:
+      label: What is the problem with the app?
+    validations:
+      required: true
+  - type: textarea
+    attributes:
+      label: If touchHLE crashed, please paste the log output.
+      render: ''
