--- a/.github/ISSUE_TEMPLATE/app_bug.yml
+++ b/.github/ISSUE_TEMPLATE/app_bug.yml
@@ -50,4 +50,4 @@ body:
   - type: textarea
     attributes:
       label: If touchHLE crashed, please paste the log output.
-      render: ''
+      render: 'text'
