--- a/.github/ISSUE_TEMPLATE/app_bug.yml
+++ b/.github/ISSUE_TEMPLATE/app_bug.yml
@@ -4,7 +4,7 @@ labels: ["bug (supported app)"]
 body:
   - type: markdown
     attributes:
-      value: >
+      value: |
         This form is for reporting an issue with an app that is already known
         to be working in touchHLE. Please check the [app compatibility database](https://appdb.touchhle.org/)
         to see which apps work. Apps with less than three stars are not
@@ -54,7 +54,7 @@ body:
   - type: textarea
     attributes:
       label: If touchHLE crashed, please paste the log output.
-      description: >
+      description: |
         On Android, this is the log.txt file. On Windows or macOS, it's visible
         in the Terminal/Command Prompt/PowerShell.
       render: 'text'
