--- a/.github/ISSUE_TEMPLATE/app_request.yaml
+++ b/.github/ISSUE_TEMPLATE/app_request.yaml
@@ -7,3 +7,9 @@ body:
       value: |
         We do not take requests to add support for specific apps.
         Please do not make such requests.
+  - type: checkboxes
+    attributes:
+      label: By submitting this issue, I certify that…
+      options:
+        - label: I understand my issue will be immediately rejected.
+          required: true
